--- a/styles/FullArticle.module.css
+++ b/styles/FullArticle.module.css
@@ -1,59 +1,129 @@
-.articlesContainer {
+@media only screen and (min-width: 1150px){
+
+	.articlesContainer {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 20px;
+	}
+	
+	.sectionTitle {
+		margin-left: 25px;
+	}
+	
+	.body {
+	width : 100%;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+	flex-direction: column;
 	align-items: center;
-	margin-bottom: 20px;
+	padding-top: 25px;
+	}
+	
+	.articles {
+		width: 50%;
+		margin: 10px;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}
+	
+	.divider {
+		width: 100%;
+		height: 1px;
+		background-color: rgb(233, 190, 89);
+		margin: 15px 0px 15px 0px
+	}
+	
+	.articleHeader {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 10px;
+		font-size: 20px;
+	}
+	
+	.bookmarkIcon {
+		cursor: pointer;
+	}
+	
+	.bookmarkIcon:hover {
+		opacity: 0.6;
+	}
+	
+	.imgContainer {
+		width : 600px;
+		height : 400px;
+		position: relative;
+	}
+	
+	.eyeIcon{
+		margin-left: 1vw;
+	}
+	
 }
 
-.sectionTitle {
-	margin-left: 25px;
-}
 
-.body {
-width : 100%;
-display: flex;
-flex-direction: column;
-align-items: center;
-padding-top: 25px;
-}
+@media only screen and (max-width: 1150px){
 
-.articles {
-	width: 50%;
-	margin: 10px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.divider {
-	width: 100%;
-	height: 1px;
-	background-color: rgb(233, 190, 89);
-	margin: 15px 0px 15px 0px
-}
-
-.articleHeader {
+	.articlesContainer {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 20px;
+	}
+	
+	.sectionTitle {
+		margin-left: 0px;
+	}
+	
+	.body {
+	width : 100%;
 	display: flex;
-	justify-content: space-between;
-    margin-bottom: 10px;
-    font-size: 20px;
-}
+	flex-direction: column;
+	align-items: center;
+	padding-top: 25px;
+	}
+	
+	.articles {
+		width: 90%;
+		margin: 10px;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}
+	
+	.divider {
+		width: 100%;
+		height: 1px;
+		background-color: rgb(233, 190, 89);
+		margin: 15px 0px 15px 0px
+	}
+	
+	.articleHeader {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 10px;
+		font-size: 20px;
+	}
+	
+	.bookmarkIcon {
+		cursor: pointer;
+	}
+	
+	.bookmarkIcon:hover {
+		opacity: 0.6;
+	}
+	
+	.imgContainer {
+		width : 80vw;
+		height : 80vw;
+		position: relative;
+	}
+	
+	.eyeIcon{
+		margin-left: 1vw;
+	}
+	
 
-.bookmarkIcon {
-	cursor: pointer;
-}
-
-.bookmarkIcon:hover {
-	opacity: 0.6;
-}
-
-.imgContainer {
-    width : 600px;
-    height : 400px;
-    position: relative;
-}
-
-.eyeIcon{
-	margin-left: 1vw;
 }
