--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -3,101 +3,249 @@
 	src: url("/fonts/OldLondon.ttf");
 }
 
-.header {
-	border-bottom: 2px rgb(233, 190, 89) solid;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+@media only screen and (min-width: 1150px){
+	.header {
+		border-bottom: 2px rgb(233, 190, 89) solid;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	
+	.title {
+		font-size: 44px;
+		font-family: "Old London";
+		text-shadow: 1px 1px 0px #000;
+	}
+	
+	.logoContainer {
+		width: 100vw;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 0px 30px 0px 30px;
+	}
+	
+	.linkContainer {
+		width: 500px;
+		margin-bottom: 15px;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		text-transform: uppercase;
+		font-size: 11px;
+		letter-spacing: 1px;
+	}
+	
+	.iconSection {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		width: 13%;
+	}
+	
+	.userSection {
+		font-size: 22px;
+		width: 12vw;
+		cursor: pointer;
+	}
+	
+	.userSection:hover {
+		opacity: 0.8;
+	}
+	
+	.date {
+		width: 12vw;
+		text-align: center;
+	}
+	
+	.link {
+		width: 150px;
+		cursor: pointer;
+		text-align: center;
+	}
+	
+	.link:hover {
+		font-weight: 600;
+		color: rgba(233, 190, 89);
+	}
+	
+	.registerContainer {
+		display: flex;
+		margin-bottom: 10px;
+		border-top: 0.5px lightgray solid;
+	}
+	
+	.registeredContainer {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	
+	.registerSection {
+		width: 250px;
+		margin: 10px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	
+	.logoutSection {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	
+	.headerIcons {
+		display: flex;
+		align-items: center;
+		justify-content: space-around;
+		width: 12vw;
+	}
+	
+
+
 }
 
-.title {
-	font-size: 44px;
-	font-family: "Old London";
-	text-shadow: 1px 1px 0px #000;
-}
 
-.logoContainer {
-	width: 100vw;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 0px 30px 0px 30px;
-}
+@media only screen and (max-width: 1150px){
+	@font-face {
+		font-family: "Old London";
+		src: url("/fonts/OldLondon.ttf");
+	}
+	
+	.header {
+		border-bottom: 2px rgb(233, 190, 89) solid;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		min-width: 100vw;
+	}
+	
+	.title {
+		font-size: 38px;
+		font-family: "Old London";
+		text-shadow: 1px 1px 0px #000;
+	}
+	
+	.logoContainer {
+		display: flex;
+		min-width: 100%;
+		justify-content: space-between;
+		align-items: center;
+	}
+	
+	.linkContainer {
+		width: 100%;
+		margin-bottom: 15px;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		text-transform: uppercase;
+		font-size: 11px;
+		letter-spacing: 1px;
+	}
+	
+	.iconSection {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		width: fit-content;
+	}
+	
+	.userSection {
+		font-size: 22px;
+		width: 12vw;
+		cursor: pointer;
+		height : 5vw
+	}
+	
+	.userSection:hover {
+		opacity: 0.8;
+	}
 
-.linkContainer {
-	width: 500px;
-	margin-bottom: 15px;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	text-transform: uppercase;
-	font-size: 11px;
-	letter-spacing: 1px;
-}
+	.eyeIcon {
+		margin : 0;
+		margin-right: 1vw;
+		padding: 0;
+	height : 5vw
+	}
+	
+	.date {
+		width: 12vw;
+		text-align: center;
+	}
+	
+	.link {
+		width: 150px;
+		cursor: pointer;
+		text-align: center;
+	}
+	
+	.link:hover {
+		font-weight: 600;
+		color: rgba(233, 190, 89);
+	}
 
-.iconSection {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	width: 13%;
-}
+	.modal {
+		width: 100%;
+		height : fit-content;
+	}
 
-.userSection {
-	font-size: 22px;
-	width: 12vw;
-	cursor: pointer;
-}
+	.modal2 {
+		width : 100vw;
+		max-width: 100vw;
+		padding : 0;
+		margin : 0;
+	}
+	
+	.registerContainer {
+		display: flex;
+		width : 100vw;
+		margin-bottom: 10px;
+		border-top: 0.5px lightgray solid;
+	}
 
-.userSection:hover {
-	opacity: 0.8;
-}
+	.registerContainer input{
+		font-size : 16px;
+		width : 50vw;
+	}
+	
+	.registeredContainer {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 100vw;
+	}
+	
+	.registerSection {
+		width: 45vw;
+		margin: 10px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	
+	.logoutSection {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		height: fit-content;
+		width : 15vw
+	}
 
-.date {
-	width: 12vw;
-	text-align: center;
-}
-
-.link {
-	width: 150px;
-	cursor: pointer;
-	text-align: center;
-}
-
-.link:hover {
-	font-weight: 600;
-	color: rgba(233, 190, 89);
-}
-
-.registerContainer {
-	display: flex;
-	margin-bottom: 10px;
-	border-top: 0.5px lightgray solid;
-}
-
-.registeredContainer {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.registerSection {
-	width: 250px;
-	margin: 10px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.logoutSection {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.headerIcons {
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	width: 12vw;
+	.logoutSection p{
+		margin : 0;
+	}
+	
+	.headerIcons {
+		display: flex;
+		align-items: center;
+		justify-content: space-around;
+		width: 12vw;
+	}
+	
 }
